// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth - Reset Password should disable reset password button when submitting 1`] = `
<pf-change-password
  confirmPassword={[Function ElementRef]}
  minLength$={[Function Observable]}
  resetError$={[Function Observable]}
  resetSuccess$={[Function Observable]}
  route="undefined"
  store={[Function Store]}
  submitEnabled="false"
  submitting$={[Function Observable]}
>
  <div
    class="card d-flex flex-column flex-grow-1"
  >
    <div
      class="card-header"
    >
      <span
        class="title"
      >
        Change Password
      </span>
    </div>
    <div
      class="card-body d-flex flex-column pl-4"
    >
      <div
        class="d-flex flex-column pl-2 pt-2"
      >
        <label
          class="label pb-1"
        >
          Current Password*
        </label>
        <input
          class="input-size form-control"
          type="password"
        />
        <pf-confirm-password />
      </div>
      <div
        class="d-flex"
      >
        <div
          class="ml-auto"
        >
          
          
          <button
            class="btn btn-primary"
            data-qa-id="btn-save-change-password"
            disabled=""
            type="button"
          >
            
            <span>
              <pf-loading-indicator />
               Saving 
            </span>
            
          </button>
        </div>
      </div>
    </div>
  </div>
</pf-change-password>
`;

exports[`Auth - Reset Password should show error section on resetError 1`] = `
<pf-change-password
  confirmPassword={[Function ElementRef]}
  minLength$={[Function Observable]}
  resetError$={[Function Observable]}
  resetSuccess$={[Function Observable]}
  route="undefined"
  store={[Function Store]}
  submitEnabled="false"
  submitting$={[Function Observable]}
>
  <div
    class="card d-flex flex-column flex-grow-1"
  >
    <div
      class="card-header"
    >
      <span
        class="title"
      >
        Change Password
      </span>
    </div>
    <div
      class="card-body d-flex flex-column pl-4"
    >
      <div
        class="d-flex flex-column pl-2 pt-2"
      >
        <label
          class="label pb-1"
        >
          Current Password*
        </label>
        <input
          class="input-size form-control"
          type="password"
        />
        <pf-confirm-password />
      </div>
      <div
        class="d-flex"
      >
        <div
          class="ml-auto"
        >
          
          
          <span
            class="pr-2 text-danger"
          >
             Current password does not match our records, please re-enter and try again. 
          </span>
          <button
            class="btn btn-primary"
            data-qa-id="btn-save-change-password"
            disabled=""
            type="button"
          >
            
            
            <span>
              Save
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</pf-change-password>
`;

exports[`Auth - Reset Password should show password reset success section  1`] = `
<pf-change-password
  confirmPassword={[Function ElementRef]}
  minLength$={[Function Observable]}
  resetError$={[Function Observable]}
  resetSuccess$={[Function Observable]}
  route="undefined"
  store={[Function Store]}
  submitEnabled="false"
  submitting$={[Function Observable]}
>
  <div
    class="card d-flex flex-column flex-grow-1"
  >
    <div
      class="card-header"
    >
      <span
        class="title"
      >
        Change Password
      </span>
    </div>
    <div
      class="card-body d-flex flex-column pl-4"
    >
      <div
        class="d-flex flex-column pl-2 pt-2"
      >
        <label
          class="label pb-1"
        >
          Current Password*
        </label>
        <input
          class="input-size form-control"
          type="password"
        />
        <pf-confirm-password />
      </div>
      <div
        class="d-flex"
      >
        <div
          class="ml-auto"
        >
          
          <span
            class="pr-2"
          >
             Success 
          </span>
          
          <button
            class="btn btn-primary"
            data-qa-id="btn-save-change-password"
            disabled=""
            type="button"
          >
            
            <span>
              <pf-loading-indicator />
               Saving 
            </span>
            
          </button>
        </div>
      </div>
    </div>
  </div>
</pf-change-password>
`;

exports[`Auth - Reset Password should show reset password section when page is loaded 1`] = `
<pf-change-password
  confirmPassword={[Function ElementRef]}
  minLength$={[Function Observable]}
  resetError$={[Function Observable]}
  resetSuccess$={[Function Observable]}
  route="undefined"
  store={[Function Store]}
  submitEnabled="false"
  submitting$={[Function Store]}
>
  <div
    class="card d-flex flex-column flex-grow-1"
  >
    <div
      class="card-header"
    >
      <span
        class="title"
      >
        Change Password
      </span>
    </div>
    <div
      class="card-body d-flex flex-column pl-4"
    >
      <div
        class="d-flex flex-column pl-2 pt-2"
      >
        <label
          class="label pb-1"
        >
          Current Password*
        </label>
        <input
          class="input-size form-control"
          type="password"
        />
        <pf-confirm-password />
      </div>
      <div
        class="d-flex"
      >
        <div
          class="ml-auto"
        >
          
          
          <button
            class="btn btn-primary"
            data-qa-id="btn-save-change-password"
            disabled=""
            type="button"
          >
            
            
            <span>
              Save
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</pf-change-password>
`;
